tests/negative/class/class_generic_count_many.tx
// EXPECTED: COMPILE_ERROR
// Description: Test generic type parameter count mismatch (too many).

class Pair<K, V> {
    key: K;
    value: V;
    constructor(k: K, v: V) {
        this.key = k;
        this.value = v;
    }
}

function main() {
    let p2 = new Pair<int, string, bool>(1, "a", true); // Error: expected 2, got 3
}
